changed the wrong margin, was meant to be margin-bottom, fixed

--- a/docs/main.css
+++ b/docs/main.css
@@ -1468,7 +1468,7 @@ input, select, textarea {
 /* Sections/Article */
 
 	section, article {
-		margin-bottom: 3em;
+		margin-bottom: 0em;
 	}
 
 	section > :last-child,
@@ -2663,7 +2663,7 @@ input, select, textarea {
 
 			#content > section,
 			#content > article {
-				margin: 0em 0 0 0;
+				margin: 3em 0 0 0;
 				padding: 3em 0 0 0;
 			}
 
@@ -2675,7 +2675,7 @@ input, select, textarea {
 
 				#sidebar > section,
 				#sidebar > article {
-					margin: 0em 0 0 0;
+					margin: 3em 0 0 0;
 					padding: 3em 0 0 0;
 				}
 
